# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  author
includes/: ft_printf.h  libft.h
libft/: ft_getlen.c
srcs/: check_color.c  check_float.c  check_info.c  check_letter.c  check_number.c  check_oct_hex.c  check_pointer.c  check_string.c  check_udi.c  check_util.c  check_z_percent.c  ft_printf.c  read_content.c  specifier.c  uint_util.c  util.c  util1.c  util2.c  util3.c  util4.c  util5.c  util6.c
